Directed acyclic word graph (DAWG) - optimizations